https://jira.catena-x.net/browse/KA-284 Migrate to EDC 0.3.3 (and intermediate artifact repo)